--- a/release-myPlugin-DataBase2/plugin/build.gradle
+++ b/release-myPlugin-DataBase2/plugin/build.gradle
@@ -31,6 +31,10 @@ repositories {
 dependencies {
     // Use the awesome Spock testing and specification framework
     testImplementation 'org.spockframework:spock-core:2.0-groovy-3.0'
+
+    // https://mvnrepository.com/artifact/org.postgresql/postgresql
+    implementation 'org.postgresql:postgresql:42.3.3'
+
 }
 
 gradlePlugin {
