--- a/Check-Print/app/src/main/resources/application.properties
+++ b/Check-Print/app/src/main/resources/application.properties
@@ -3,7 +3,6 @@ jdbc-url=jdbc:postgresql://localhost:5432/clevertec
 jdbc-username=postgres
 jdbc-password=postgres
 
-
 spring.mail.host=smtp.gmail.com
 spring.mail.username=vorobeypavel77@gmail.com
 spring.mail.password=Pbg1296346!
@@ -14,4 +13,4 @@ spring.mail.smtp.ssl.protocols=TLSv1.2
 spring.mail.smtp.ssl.trust=smtp.gmail.com
 spring.mail.smtp.auth=true
 spring.mail.smtp.starttls.enable=true
-mail.debug=true
+mail.debug=false
