--- a/Check-Print/app/src/main/resources/application.properties
+++ b/Check-Print/app/src/main/resources/application.properties
@@ -5,7 +5,7 @@ jdbc-password=postgres
 
 spring.mail.host=smtp.gmail.com
 spring.mail.username=vorobeypavel77@gmail.com
-spring.mail.password=Pbg1296346!
+spring.mail.password=omgegftwonchqyzv
 spring.mail.port=587
 
 spring.mail.transport.protocol=smtp
